PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.1.0beta1



08 Jul 2021, PHP 8.1.0alpha3

- Core:
  . Fixed bug #81202 (powerpc64 build fails on fibers). (krakjoe)
  . Fixed bug #80072 (Cyclic unserialize in TMPVAR operand may leak). (Nikita)

- Curl:
  . Fixed bug #81085 (Support CURLOPT_SSLCERT_BLOB for cert strings).
    (camporter)

- Reflection:
  . Fixed bug #81200 (no way to determine if Closure is static). (krakjoe)

24 Jun 2021, PHP 8.1.0alpha2

- Core:
  . Fixed bug #81163 (__sleep allowed to return non-array). (krakjoe)

- Opcache:
  . Fixed bug #81133 (building opcache with phpize fails). (krakjoe)
  . Fixed bug #81136 (opcache header not installed). (krakjoe)

- PDO OCI:
  . Fixed bug #77120 (Support 'success with info' at connection).
    (Sergei Morozov)
    
- phpdbg:
  . Fixed bug #81135 (unknown help topic causes assertion failure). (krakjoe)

- SPL:
  . Fixed bug #81112 (Special json_encode behavior for SplFixedArray). (Nikita)
  . Fixed bug #80945 ("Notice: Undefined index" on unset() ArrayObject
    non-existing key). (Nikita)
    
- Standard:
  . Fixed bug #81137 (hrtime breaks build on OSX before Sierra). (krakjoe)

10 Jun 2021, PHP 8.1.0alpha1

- Core:
  . Fixed inclusion order for phpize builds on Windows. (cmb)
  . Added missing hashtable insertion APIs for arr/obj/ref. (Sara)
  . Fixed bug #75474 (function scope static variables are not bound to a unique
    function). (Nikita)
  . Fixed bug #53826 (__callStatic fired in base class through a parent call if
    the method is private). (Nikita)
  . Implemented FR #77372 (Relative file path is removed from uploaded file).
    (Björn Tantau)
  . Fixed bug #81076 (incorrect debug info on Closures with implicit binds).
    (krakjoe)
 
 - Standard:
  . Fixed bug #77627 (method_exists on Closure::__invoke inconsistency).
    (krakjoe)

- Date: