@@ -687,13 +687,15 @@ final class ReflectionReference
     private function __construct() {}
 }
 
-final class ReflectionAttribute
+final class ReflectionAttribute implements Reflector
 {
     public function getName(): string {}
     public function getTarget(): int {}
     public function isRepeated(): bool {}
     public function getArguments(): array {}
     public function newInstance(): object {}
+
+    public function __toString(): string {}
 
     private function __clone(): void {}
 
